lustre/ptlrpc/service.c
@@ -1788,6 +1788,7 @@ ptlrpc_server_handle_req_in(struct ptlrpc_service_part *svcpt)
         req->rq_export = class_conn2export(
                 lustre_msg_get_handle(req->rq_reqmsg));
         if (req->rq_export) {
+		class_export_rpc_get(req->rq_export);
                 rc = ptlrpc_check_req(req);
                 if (rc == 0) {
                         rc = sptlrpc_target_export_check(req->rq_export, req);
@@ -1830,6 +1831,8 @@ ptlrpc_server_handle_req_in(struct ptlrpc_service_part *svcpt)
 	RETURN(1);
 
 err_req:
+	if (req->rq_export)
+		class_export_rpc_put(req->rq_export);
 	cfs_spin_lock(&svcpt->scp_req_lock);
 	svcpt->scp_nreqs_active++;
 	cfs_spin_unlock(&svcpt->scp_req_lock);
@@ -1918,6 +1921,8 @@ ptlrpc_server_handle_request(struct ptlrpc_service_part *svcpt,
 	rc = lu_context_init(&request->rq_session, LCT_SESSION | LCT_NOREF);
         if (rc) {
                 CERROR("Failure to initialize session: %d\n", rc);
+		if (request->rq_export != NULL)
+			class_export_rpc_put(request->rq_export);
                 goto out_req;
         }
         request->rq_session.lc_thread = thread;
@@ -1931,10 +1936,12 @@ ptlrpc_server_handle_request(struct ptlrpc_service_part *svcpt,
                 request->rq_svc_thread->t_env->le_ses = &request->rq_session;
 
         if (likely(request->rq_export)) {
-                if (unlikely(ptlrpc_check_req(request)))
-                        goto put_conn;
+		if (unlikely(ptlrpc_check_req(request))) {
+			class_export_rpc_put(request->rq_export);
+			goto put_conn;
+		}
                 ptlrpc_update_export_timer(request->rq_export, timediff >> 19);
-                export = class_export_rpc_get(request->rq_export);
+		export = request->rq_export;
         }
 
         /* Discard requests queued for longer than the deadline.
@@ -3025,6 +3032,9 @@ ptlrpc_service_purge_all(struct ptlrpc_service *svc)
 		while (!cfs_list_empty(&svcpt->scp_req_incoming)) {
 			req = cfs_list_entry(svcpt->scp_req_incoming.next,
 					     struct ptlrpc_request, rq_list);
+
+			if (req->rq_export != NULL)
+				class_export_rpc_put(req->rq_export);
 
 			cfs_list_del(&req->rq_list);
 			svcpt->scp_nreqs_incoming--;
